--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@neo4j/graphql": "^3.5.0",
+    "@apollo/server": "^4.10.0",
+    "@neo4j/graphql": "^3.24.3",
     "apollo-server": "^3.9.0",
-    "graphql": "^16.5.0",
-    "neo4j-driver": "^4.4.6"
+    "graphql": "^16.8.1",
+    "neo4j-driver": "^4.4.11"
   }
 }
